# dashboard

./: .coverage  .dockerignore  .env  .flake8.ini  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.sh  uwsgi.ini
.github/workflows/: ci-cd.yml
core/: celery.py  settings.py  urls.py
data/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
data/migrations/: 0001_initial.py  0002_alter_pricehistory_timestamp.py  0003_alter_pricehistory_timestamp.py  0004_cryptocurrency_created_at_cryptocurrency_is_active_and_more.py
data/tests/: test_cache.py  test_models.py  test_services.py  test_tasks.py  test_views.py
system_frontend/: README.md  package-lock.json  package.json
system_frontend/src/: App.vue
system_frontend/src/request/: api.js  request.js
system_frontend/src/router/: index.js
system_frontend/src/views/: latestPrice.vue
utils/: cache_utils.py  djangoauthenticate.py  djangomiddlewares.py  drfexception.py  jwtauthentication.py  jwtresponse.py  jwtthrottles.py  logmiddlewares.py  pagination.py
